--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
           </suiteXmlFiles>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      
     </plugins>
 
   </build>
