--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,12 @@
       </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
         <configuration>
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
-      
+
     </plugins>
 
   </build>
